--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nes-gen",
-  "version": "1.0.0",
+  "name": "gbee-cli",
+  "version": "1.0.1",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "genest": "index.js"
+    "gbee": "main.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
