--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -18,7 +21,7 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          
+
       - name:  'Automated Version Bump'
         uses:  'phips28/gh-action-bump-version@master'
         env:
