--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gbee-cli",
   "version": "1.1.1",
-  "main": "index.js",
+  "main": "main.js",
   "type": "module",
   "bin": {
     "gbee": "main.js"
