--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gbee": "main.js"
   },
   "scripts": {
-    "bump-version": "npm version patch -m \"chore(release): %s\""
+    "bump-version": "npm version patch -m \"chore(release): %s\"",
+    "start:dev": "npx tsc --watch"
   },
   "keywords": [],
   "author": "daris02",
@@ -17,7 +18,9 @@
     "child_process": "^1.0.2",
     "commander": "^12.1.0",
     "fs-extra": "^11.2.0",
-    "inquirer": "^10.2.0"
+    "inquirer": "^10.2.0",
+    "js-yaml": "^4.1.0",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "standard-version": "^9.5.0"
