--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "commander": "^12.1.0",
-    "fs-extra": "^11.2.0",
+    "fs-extra": "^11.3.0",
     "inquirer": "^10.2.0",
     "js-yaml": "^4.1.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "standard-version": "^9.5.0"
   }
 }
