--- a/api.yml
+++ b/api.yml
@@ -7,44 +7,16 @@ info:
     email: daris@gmail.com
   version: 1.0.
 servers:
-  - url: https://petstore3.swagger.io/api/v3
+  - url: https://my.gbee.app/api
 tags:
-  - name: user
+  - name: users
     description: Operations about user
 paths:
-  /user:
+
+  /users:
     post:
       tags:
-        - user
-      summary: Create user
-      description: This can only be done by the logged in user.
-      operationId: createUser
-      requestBody:
-        description: Created user object
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
-      responses:
-        default:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
-  /user/createWithList:
-    post:
-      tags:
-        - user
+        - users
       summary: Creates list of users with given input array
       description: Creates list of users with given input array
       operationId: createUsersWithListInput
@@ -62,15 +34,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: successful operation
-  /user/login:
+        '400':
+          description: Route not found
+        '500':
+          description: Internal server error
+
+  /users/whoami:
     get:
       tags:
-        - user
+        - users
+      summary: Logs user into the system
+      description: ''
+      operationId: whoami
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Invalid username/password supplied
+        '500':
+          description: Internal server error
+
+  /users/login:
+    get:
+      tags:
+        - users
       summary: Logs user into the system
       description: ''
       operationId: loginUser
@@ -90,30 +81,19 @@ paths:
       responses:
         '200':
           description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
           content:
-            application/xml:
-              schema:
-                type: string
             application/json:
               schema:
                 type: string
         '400':
           description: Invalid username/password supplied
-  /user/logout:
+        '500':
+          description: Internal server error
+
+  /users/logout:
     get:
       tags:
-        - user
+        - users
       summary: Logs out current logged in user session
       description: ''
       operationId: logoutUser
@@ -121,20 +101,21 @@ paths:
       responses:
         default:
           description: successful operation
-  /user/{username}:
+
+  /users/{userId}:
     get:
       tags:
-        - user
-      summary: Get user by user name
+        - users
+      summary: Get user by user ID
       description: ''
-      operationId: getUserByName
+      operationId: getUserId
       parameters:
         - name: username
           in: path
           description: 'The name that needs to be fetched. Use user1 for testing. '
           required: true
           schema:
-            type: string
+            type: integer
       responses:
         '200':
           description: successful operation
@@ -142,94 +123,92 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
         '400':
           description: Invalid username supplied
         '404':
           description: User not found
+        '500':
+          description: Internal server error
+
     put:
       tags:
-        - user
+        - users
       summary: Update user
       description: This can only be done by the logged in user.
       operationId: updateUser
       parameters:
-        - name: username
+        - name: userId
           in: path
           description: name that need to be deleted
           required: true
           schema:
-            type: string
+            type: integer
       requestBody:
         description: Update an existent user in the store
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
       responses:
-        default:
+        '200':
           description: successful operation
-    delete:
-      tags:
-        - user
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      parameters:
-        - name: username
-          in: path
-          description: The name that needs to be deleted
-          required: true
-          schema:
-            type: string
-      responses:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
         '400':
           description: Invalid username supplied
         '404':
           description: User not found
+        '500':
+          description: Internal server error
+
+    delete:
+      tags:
+        - users
+      summary: Delete user
+      description: This can only be done by the logged in user.
+      operationId: deleteUser
+      parameters:
+        - name: userId
+          in: path
+          description: The name that needs to be deleted
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'user delete successfully'
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
+        '500':
+          description: Internal server error
+
 components:
   schemas:
-    Product:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        name:
-          type: string
-          example: productName
-        price:
-          type: integer
-          format: int64
-          example: 10
     User:
       type: object
       properties:
         id:
           type: integer
           format: int64
-          example: 10
+          example: 1
         username:
           type: string
-          example: theUser
+          example: john
         email:
           type: string
           example: john@email.com
         password:
           type: string
-          example: '12345'
-        phone:
-          type: string
-          example: '12345'
+          example: '123'
   requestBodies:
     UserArray:
       description: List of user object
@@ -239,6 +218,7 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/User'
+
   securitySchemes:
     api_key:
       type: apiKey
