--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gbee-cli",
   "version": "1.3.5",
-  "main": "main.js",
-  "type": "module",
+  "main": "dist/main.js",
+  "type": "commonjs",
   "bin": {
-    "gbee": "main.js"
+    "gbee": "dist/main.js"
   },
   "scripts": {
     "bump-version": "npm version patch -m \"chore(release): %s\"",
