--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,9 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "NodeNext",
-    "moduleResolution": "nodenext",
-    "outDir": ".",
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
-  "files": [
-    "src/generate.ts"
-  ],
   "exclude": [
     "node_modules"
   ]
